tests/match-04/out.txt
error: non-exhaustive match
  ┌─ err.sml:2:8
  │
2 │   case (true, false) of
  │        ^^^^^^^^^^^^^

typechecking failed
